@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST brasero-3.11.3.tar.xz 3362000 SHA256 0b6fa557d67845b7a4f9978b565a6769e1a023c397a73f2891a8f1c7c55e2d4c SHA512 ac4e5948c27b0925a0ac9ae1a39afbadd7075cb221ea748750b0c1400489a2dac82fc96f317ab82c1243b29346f4ec889f2b0819e7c2459d79bb771dd9129813 WHIRLPOOL 63593dd8fc7b03fab29dfa3e63224012a80310dc909c165bf7cefc7e967f8f1f3cbbfb0c8fbc24fe8ab944814ccebe4915a7ced57ac8a1e5b60e6dff9e403f67
 DIST brasero-3.11.4.tar.xz 3605076 SHA256 bd02eb845de0a91a4acaf941d4ea7b7584d073894270f121781692dc34eb9693 SHA512 5c7014022bcb0494d5b7d67e468cb54df9945ba4cc35ad835c39bdbfacc21cc5ab2bb466e40973abc64ee12386dae5ef71a1401fea4169a97652b763d9ad36b7 WHIRLPOOL bec6972c55d7aacbe67aa00a44f0a816d6ddcd68c5eaf0ecbd415516b2129ecc41e7c97a6ac52a55b7ba6585c430f1e683d18aa1e1bddf001ed9ce9b4745e6b9
+DIST brasero-3.12.0.tar.xz 3652832 SHA256 68fef2699b772fa262d855dac682100dbfea05563a7e4056eff8fe6447aec2fc SHA512 d8e40bc505d7bb77b1c74914895a8ccfd2a8773e5a86fe0d4ae2625710fc56a654cf125e7799d4bd1e4d38e1d8a255de3c9f028ce1b770c163dff2033fb662d2 WHIRLPOOL adc1d3d773679a1ca0b76031a8065d8e2d7447eb94db595bfbe5e33226b5f189166781b33718337f489baf9fbb9e1d0adc14410a0c2060aeeebe073020f82029
 EBUILD brasero-3.11.3.ebuild 2414 SHA256 2c4618c45582c1c8ea23b80f9bcc9c7875d9333d3251875689c339c8b41f4601 SHA512 fd232ae6aca10c074a786bc975cb2c2548fa8dfd10a5b6008b7ee2f7431026fc40407256d213d17814dc7a52f2c671fbe8c34d7264563a0c1d50f70abfb60d9c WHIRLPOOL b19349e6a2ad1b411234c3a6ac6cee63f2ed3c2b93baa0a4b618fa8af8f36f80d23998bd5cbf2e0dca588f630f0cf45b90b01d09edcdb17c4b4cfbf8ea5fe1fb
 EBUILD brasero-3.11.4.ebuild 2202 SHA256 f03aec341197c791fa5d0e9b6ecca2b72c14d362829ef2efc81a8717e2129413 SHA512 35dc2af48d6a59ecd5c17ff08f8a1285add5e77f0281398d23e7586c85c603675f886b9ea73187c0427a69ce540a0fde69ddedefb66ce1416c21e1fac835e758 WHIRLPOOL 3e5832cc4578cd0dc6e429c06df2f954c2f23205a257cbf29225c5db8367819a42380b1372930e0e45c75c6fe88972660eea95e1a743a9ea8924b04fa74d5eb9
-MISC ChangeLog 26744 SHA256 7312d5f041633cb8e12d77e2e843399d9d8d4baeb5598b1f8a63fb4f96045b57 SHA512 ffeea58909d8d6d9abb66b035ee578d40dd0bc262f94c6c9485632ef6079503088a2aa6441187d84abce0264fe9b34093981a8475723771c764cc07ecd2c29bd WHIRLPOOL 9cc9aeee9856a6334381f4b7e67aa55d70a68b6a7081d3e54dedb4972d139ec6918fb3fc09edfde3369b31f450e6d9b6b57f4e11c8d3c3d1097d09d11c1b8581
+EBUILD brasero-3.12.0.ebuild 2202 SHA256 722c6a4f9e8b35b51999b1624e1ceb9a3bdd21f9c5f114e91566f25acca2a843 SHA512 b30bdbdcd7146b42ddad07ed97dfee8dd7f3d085a49729d2355064ebc9758682ecf3f6d83ad9d82f005e027701ec8ea6b7441cd583be9c87536b72d416cdf2ba WHIRLPOOL dc018b7671291d9dc4418ad4b21176fc31d329e48a812e89fb295360192ab9b56f218080ded70c859e0245ff1290235ad5de523baaa92f668dee26ae116b1e66
+MISC ChangeLog 26861 SHA256 dd8988411a1b51f55f04269b6ba770b96f00e09058e225caf11e8cc93402964a SHA512 5e9e8bd7643b3a86f2092b685bf77a08712064da62900683c777113689585cc7c03edf008cf400e314afb435fb4134af36f499389ed7e2efaf4a806b08e9d4d7 WHIRLPOOL 886f68cefa83489ead7f72b0bbeb3bb30a775f8024b9a2a84517a879b5e748d3ad4c4db3fa5cd1ec516d14cf2def9580003065688bc3082baa9b94b575a10534
 MISC metadata.xml 701 SHA256 a71510c2b1630ee022e0bc2d7622cd5023fbe4c573feb31d20ee03cb0bc2e5d6 SHA512 fe7e6a04fd4c1ad63832256b331fde2370456fe9eb02ba152de7e2771aa7d90f1aaa8fcc3a92fac1f5cd07a07af10b5164f35da3cb36479fbe489b0b645a1917 WHIRLPOOL b1d52e712520514429c80494c3a57173ec19dbef0e85fac0c1be71ec4d6d750adb92802162d64c146cfca145da0f58bfa1d9e162949605fa516976a0807e06c8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRki8gACgkQCaWpQKGI+9TfhQCfaP56IjRD7ooUnmAj3nuj4Xk1
-KXYAniuOaoGP0Ts3ArIqIPlBzx5cN+aA
-=+j0U
+iEYEAREIAAYFAlRkwi8ACgkQCaWpQKGI+9S+TwCeKMw3X1z1pZLgHaEu20Ve0wsi
+yAAAn0oovMVWKQSbTSt7fqEhOaG7P774
+=WDgb
 -----END PGP SIGNATURE-----
